<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_edit_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="170dp"
            android:layout_height="100dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            app:startIconDrawable="@drawable/icon_material_person_outline"
            android:hint="@string/name"
            app:helperText="@string/name_helper"
            app:helperTextEnabled="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/surname_edit_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/student_name_edittext_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/surname_edit_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="170dp"
            app:startIconDrawable="@drawable/icon_material_person_outline"
            android:layout_height="100dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/surname"
            app:helperText="@string/surname_helper"
            app:helperTextEnabled="true"
            app:layout_constraintBottom_toBottomOf="@+id/name_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/name_edit_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/student_surname_edittext_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_edit_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:hint="@string/email"
            app:helperText="@string/email_helper"
            app:helperTextEnabled="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/surname_edit_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_edit_text"
            app:layout_constraintVertical_bias="0.0"
            app:startIconDrawable="@drawable/icon_material_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/student_email_edittext_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/department_dropdown"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/department"
            android:visibility="visible"
            app:helperText="@string/department_helper"
            app:helperTextEnabled="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/email_edit_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/email_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/email_edit_text"
            app:layout_constraintVertical_bias="0"
            app:startIconDrawable="@drawable/icon_material_person_outline">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/birthdate_edit_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:hint="@string/birthdate"
            app:helperText="@string/birthdate_helper"
            app:helperTextEnabled="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/surname_edit_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/department_dropdown"
            app:layout_constraintVertical_bias="0.0"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/icon_material_date_range">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/student_birthdate_edittext_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/birthdate_edit_text"
            app:layout_constraintEnd_toEndOf="@+id/email_edit_text"
            app:layout_constraintStart_toStartOf="@+id/email_edit_text"
            app:layout_constraintTop_toTopOf="@+id/name_edit_text"
            android:visibility="gone">

            <DatePicker

                android:id="@+id/date_picker_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="15dp"
                android:endYear="2000"
                android:startYear="1960"
                android:visibility="visible"
                android:yearListItemTextAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>